--- a/style.css
+++ b/style.css
@@ -1,7 +1,90 @@
-*{
-    margin: 0%;
-    padding: 0%;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #333;
+  color: #fff;
+}
 
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0% 1rem;
+  background-color: #000;
+  color: #5eb1bf;
+  z-index: 10;
+  box-shadow: 0px 5px 5px hsla(0, 0%, 0%, 0.6);
+}
 
+#fullscreen-toggle,
+#themes {
+  padding: 0 1rem;
+}
+
+#fullscreen-toggle:hover,
+#themes:hover {
+  transform: scale(1.25);
+}
+
+.main-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: calc(100vh - 3rem);
+}
+
+#setup {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #5eb1bf;
+    min-width: 30%;
+    height: auto;
+    aspect-ratio: 2 / 1;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 25px hsla(0, 0%, 0%, 0.2);
+    padding: 20px;
+}
+
+#setup h2{
+    font-size: 2rem;
+    font-weight: 900;
+    white-space: nowrap;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.button-container button{
+    flex: 1;
+    max-width: 25%;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    font-size: 1rem;
+}
+
+.button-container button:hover{
+    background-color: rgb(199, 247, 255);
+    box-shadow: 0px 0px 5px hsla(0, 0%, 0%, 0.4);
+    transform: scale(1.05);
+}
+
+#player-info{
+    display: none;
+}
+
+#game-info{
+    display: none;
+}
