--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #333;
+  background-image: url(img/1000_F_600910081_ZUJpUZpTTj2lJBuRpDtMFKs0OtOPuxl4.jpg);
   color: #fff;
 }
 
@@ -21,13 +21,7 @@ body {
   box-shadow: 0px 5px 5px hsla(0, 0%, 0%, 0.6);
 }
 
-#fullscreen-toggle,
-#themes {
-  padding: 0 1rem;
-}
-
-#fullscreen-toggle:hover,
-#themes:hover {
+#fullscreen-toggle:hover{
   transform: scale(1.25);
 }
 
@@ -40,7 +34,7 @@ body {
 }
 
 #setup {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -82,7 +76,13 @@ body {
 }
 
 #player-info{
-    display: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #5eb1bf;
+    min-width: 30%;
+    height: auto;
+    aspect-ratio: 2 / 1;
 }
 
 #game-info{
