--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Press Start 2P";
-  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('img/tic-tac-toe.png') center/cover no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('img/tic-tac-toe.png');
   color: #fff;
 }
 
@@ -18,7 +18,7 @@ body {
   justify-content: space-between;
   height: 5vh;
   padding: 0% 1rem;
-  background-color: #000;
+  background-color: #222;
   color: #fff;
   z-index: 10;
   box-shadow: 0px 5px 5px hsla(0, 0%, 0%, 0.6);
@@ -79,7 +79,8 @@ body {
 }
 
 .button-container button:hover{
-    box-shadow: 2px 2px 2px hsla(0, 0%, 0%), -2px -2px 2px hsl(0, 0%, 100%);
+  background-color: #fff200;
+    box-shadow: 2px 2px 2px hsla(0, 0%, 0%), -2px -2px 2px hsl(57, 100%, 50%);
     transform: scale(1.05);
 }
 
