--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ body {
 
 .main-content{
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: calc(100vh - 3rem);
@@ -84,14 +83,51 @@ body {
     transform: scale(1.05);
 }
 
-#player-info{
-    display: none;
-    justify-content: center;
-    align-items: center;
-    background-color: #5eb1bf;
-    min-width: 30%;
-    height: auto;
-    aspect-ratio: 2 / 1;
+#player-info {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #222;
+  min-width: 30%;
+  min-height: 200px;
+  aspect-ratio: 2 / 1;
+  text-align: center;
+  border-radius: 10px;
+  box-shadow: 0px 0px 15px hsla(0, 0%, 0%);
+  padding: 10px;
+}
+
+#player-names {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  max-width: 200px;
+}
+
+#player-names input{
+  border: none;
+  background-color: #f6f6f6;
+  box-shadow: 2px 2px 2px #000 inset, -2px -2px 2px #fff inset;
+  padding: 10px;
+}
+
+#player-names button{
+  /* flex: 1; */
+  min-width: 60%;
+  padding: 5px;
+  margin: 10px 0px;
+  border: none;
+  border-radius: 10px;
+  font-family: "Press Start 2P";
+}
+
+#player-names button:hover{
+background-color: #fff200;
+  box-shadow: 2px 2px 2px hsla(0, 0%, 0%), -2px -2px 2px hsl(57, 100%, 50%);
+  transform: scale(1.05);
 }
 
 #game-info{
