--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 }
 
 #setup {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -60,14 +60,14 @@ body {
     white-space: nowrap;
 }
 
-.button-container {
+.button-container1 {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
     
 }
 
-.button-container button{
+.button-container1 button{
     flex: 1;
     max-width: 25%;
     padding: 10px;
@@ -77,7 +77,7 @@ body {
     font-size: 1rem;
 }
 
-.button-container button:hover{
+.button-container1 button:hover{
   background-color: #fff200;
     box-shadow: 2px 2px 2px hsla(0, 0%, 0%), -2px -2px 2px hsl(57, 100%, 50%);
     transform: scale(1.05);
@@ -131,5 +131,19 @@ background-color: #fff200;
 }
 
 #game-info{
-    display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #222;
+  min-width: 40%;
+  min-height: 200px;
+  aspect-ratio: 1 / 1;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 0px 15px hsla(0, 0%, 0%);
+}
+
+#game-board{
+  
 }
