--- a/style.css
+++ b/style.css
@@ -137,13 +137,23 @@ background-color: #fff200;
   justify-content: space-around;
   background-color: #222;
   min-width: 40%;
-  min-height: 200px;
+  max-width: 400px;
   aspect-ratio: 1 / 1;
   border-radius: 10px;
   padding: 10px;
+  gap: 2rem;
   box-shadow: 0px 0px 15px hsla(0, 0%, 0%);
 }
 
 #game-board{
-  
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(3,1fr);
+  text-align: center;
+  align-items: center;
+  gap: 5px;
+  width: 75%;
+  height: auto;
+  aspect-ratio: 1 / 1;
+  margin: auto;
 }
