--- a/style.css
+++ b/style.css
@@ -157,3 +157,16 @@ background-color: #fff200;
   aspect-ratio: 1 / 1;
   margin: auto;
 }
+
+.cell{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #fff200;
+  color: #000;
+  border-radius: 4px;
+  font-size: 2rem;
+  cursor: pointer;
+}
