--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 body {
   font-family: "Press Start 2P";
-  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('img/tic-tac-toe.png');
+  background: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('img/BG-Object.png');
   color: #fff;
 }
 
@@ -40,7 +40,7 @@ body {
 }
 
 #setup {
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
@@ -131,7 +131,7 @@ background-color: #fff200;
 }
 
 #game-info{
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
@@ -140,7 +140,7 @@ background-color: #fff200;
   max-width: 400px;
   aspect-ratio: 1 / 1;
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
   gap: 2rem;
   box-shadow: 0px 0px 15px hsla(0, 0%, 0%);
 }
