--- a/style.css
+++ b/style.css
@@ -171,14 +171,14 @@ background-color: #fff200;
   cursor: pointer;
 }
 
-.button-container2 {
-  display: flex;
+#button-container2 {
+  display: none;
   justify-content: space-evenly;
   width: 100%;
   
 }
 
-.button-container2 button{
+#button-container2 button{
   flex: 1;
   max-width: 25%;
   padding: 10px;
@@ -188,7 +188,7 @@ background-color: #fff200;
   font-size: 0.75rem;
 }
 
-.button-container2 button:hover{
+#button-container2 button:hover{
 background-color: #fff200;
   box-shadow: 2px 2px 2px hsla(0, 0%, 0%), -2px -2px 2px hsl(57, 100%, 50%);
   transform: scale(1.05);
